@@ -1,5 +1,6 @@
 package de.asedem.explorer.spigot.commands.modules;
 
+import de.asedem.explorer.core.FileHandler;
 import de.asedem.explorer.core.cli.CliHandler;
 import de.asedem.explorer.spigot.ExplorerSpigot;
 import de.asedem.explorer.spigot.libs.CommandModule;
@@ -24,7 +25,7 @@ public class NanoModule extends CommandModule {
     @Override
     public void onCommand(@NotNull CommandSender sender, @NotNull String[] args) {
         if (args.length != 1) return;
-        UUID uuid = sender instanceof Player player ? player.getUniqueId() : ExplorerSpigot.CONSOLE;
+        UUID uuid = ExplorerSpigot.bukkitUUID.get(sender);
         Bukkit.getScheduler().runTaskAsynchronously(super.getMain(), () -> {
             String result = null;
             try {
@@ -40,14 +41,28 @@ public class NanoModule extends CommandModule {
 
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull String[] args) {
-        UUID uuid = sender instanceof Player player ? player.getUniqueId() : ExplorerSpigot.CONSOLE;
-        File file = CliHandler.directory(uuid);
-        if (file == null || !file.exists()) return Collections.emptyList();
-        File[] files = file.listFiles();
-        if (files == null || files.length == 0) return Collections.emptyList();
-        return Arrays.stream(files)
-                .filter(File::isFile)
-                .map(File::getName)
-                .toList();
+        if (args.length == 0) return List.of("load", "save");
+        if (args[0].equalsIgnoreCase("load")) {
+            UUID uuid = ExplorerSpigot.bukkitUUID.get(sender);
+            File[] files = FileHandler.subfiles(uuid);
+            if (files == null) return Collections.emptyList();
+            return Arrays.stream(files)
+                    .filter(File::isFile)
+                    .map(File::getName)
+                    .toList();
+        }
+        if (args[0].equalsIgnoreCase("save")) {
+            if (args.length == 1) {
+                UUID uuid = ExplorerSpigot.bukkitUUID.get(sender);
+                File[] files = FileHandler.subfiles(uuid);
+                if (files == null) return Collections.emptyList();
+                return Arrays.stream(files)
+                        .filter(File::isFile)
+                        .map(File::getName)
+                        .toList();
+            }
+            return Collections.singletonList("https://hastebin.com/");
+        }
+        return Collections.emptyList();
     }
 }
